examples/checker_tests/good/zero-width.p4
control C() {
  bit<0> x;
  varbit<0> y;
  apply {
  }
}
