examples/checker_tests/bad/duplicate-struct.p4
struct s {
    bit<8> x;
}
struct s {
    bit<2> y;
}